# vidtoolz-creator-qa

./: AGENTS.md  README.md  pyproject.toml
data/: resolve_terms.json
docs/: codex-handoff-template.md  episode-factory-bridge.md  episode-factory-integration.md  failure-examples.md  hermes-integration.md  profiles.md
examples/: resolve-tutorial-sample.md
examples/episode-factory/: resolve-episode-good.json  resolve-episode-weak.json
examples/failures/: bad-title-sample.md  missing-viewer-payoff-sample.md  resolve-risky-claims-sample.md  suspicious-resolve-terms-sample.md  thumbnail-mismatch-sample.md  weak-script-structure-sample.md
examples/reports/: sample-hermes-report.md  sample-linear-report.md  sample-output.json  sample-report.md
hermes/: creator-qa-hermes-instructions.md  creator-qa-tool.json
scripts/: hermes-creator-qa.sh  verify.sh
src/creator_qa/: __init__.py  cli.py  episode.py  models.py  parser.py  profiles.py  report.py  rules.py
templates/: ai-video-breakdown.md  creator-qa-package.md  kit-newsletter.md  long-form-resolve-tutorial.md  product-affiliate-page.md  shorts-script.md
tests/: test_episode.py  test_parser.py  test_report.py  test_rules.py
